# CopyPlusPlus-Qt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CopyPlusPlus-Qt.pro  CopyPlusPlus-Qt_en_US.ts  README.md  language.cpp  language.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mykeysequenceedit.cpp  mykeysequenceedit.h  processtext.cpp  processtext.h  resources.qrc  settingswindow.cpp  settingswindow.h  settingswindow.ui  toggle.cpp  toggle.h  toggle.ui  vcpkg.json
.github/workflows/: Build.yml  CodeQL.yml  Depoly.yml  Vcpkg.yml  cmake.yml  codeql.yml
languages/: CopyPlusPlus-Qt_en_US.ts
material/lib/: qtmaterialtheme.cpp  qtmaterialtheme.h
src/: main.cpp  mainwindow.cpp  mykeysequenceedit.h  settingswindow.h  toggle.ui
src/components/: mykeysequenceedit.cpp  mytoggle.cpp  mytoggle.h  toggle.cpp  toggle.h  toggle.ui
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.ui
src/utils/: language.cpp  textprocessor.cpp  textprocessor.h
translations/: CopyPlusPlus_en_US.ts  CopyPlusPlus_zh_CN.qm  CopyPlusPlus_zh_CN.ts
